src/app/globals.css
html, body {
  text-align: center;
}

#app-heading {
  cursor: pointer;
}

.error {
  color: red;
}

.stats-container {
  display: flex;
  flex-flow: row nowrap;
}

.filters {
  display: flex;
  flex-flow: column wrap;
  width: 10%;
  margin: 2em;
}

.filter {
  display: flex;
  flex-flow: column wrap;
}

.stats-content {
  
}

.stats {
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  margin: 2em;
}

.spinner {
  display: flex;
  justify-content: center;
}

.stat-section {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.stat {
  flex-basis: 20%;
  padding: 1.5em;
}

